<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="chris.eccleston.footballinfo.activities.TeamActivity">

    <item
        android:id="@+id/sort"
        android:title="Sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/roster_sort_by_name"
                android:checkable="true"
                android:orderInCategory="1"
                android:title="@string/roster_sort_by_name" />
            <item
                android:id="@+id/roster_sort_by_number"
                android:checkable="true"
                android:orderInCategory="2"
                android:title="@string/roster_sort_by_number" />
            <item
                android:id="@+id/roster_sort_by_position"
                android:checkable="true"
                android:orderInCategory="3"
                android:title="@string/roster_sort_by_position" />
        </menu>
    </item>
</menu>
